exercises/07-opa-gatekeeping/solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    contact: 'John Doe'
    commit-hash: '53cb5409ff1c73e1f80f19a09cf1ebc56b6125a4'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.18.0
        ports:
        - containerPort: 80
